# fenics-sz

./: _config.yml  _toc.yml  readme.md  test_poisson.py  test_time.py
docker/: Dockerfile  build.sh  pyproject.toml  requirements.txt  requirements_min.txt
python/: geometry.py  pyproject.toml  utils.py
python/background/: batchelor.py  batchelor_nest.py  batchelor_parallel.py  blankenbach.py  blankenbach_parallel.py  nested_poisson_2d.py  poisson_1d.py  poisson_2d.py  poisson_2d_parallel.py  poisson_2d_tests.py  readme.md
python/fenics_sz/: __init__.py  geometry.py
python/fenics_sz/background/: __init__.py  batchelor.py  batchelor_nest.py  blankenbach.py  poisson_1d.py  poisson_2d.py  poisson_2d_tests.py  readme.md
python/fenics_sz/sz_problems/: __init__.py  readme.md  sz_base.py  sz_benchmark.py  sz_geometry.py  sz_params.py  sz_problem.py  sz_slab.py  sz_steady_dislcreep.py  sz_steady_isoviscous.py  sz_steady_problem.py  sz_tdep_dislcreep.py  sz_tdep_isoviscous.py  sz_tdep_problem.py
python/fenics_sz/utils/: __init__.py  ipp.py  mesh.py  plot.py
python/global_suites/: readme.md
python/global_suites/steady_state/: 01_Alaska_Peninsula.py  02_Alaska.py  03_British_Columbia.py  04_Cascadia.py  05_Mexico.py  06_GuatElSal.py  (+52 more)
python/sz_problems/: readme.md  sz_base.py  sz_benchmark.py  sz_geometry.py  sz_params.py  sz_problem.py  sz_slab.py  sz_steady_dislcreep.py  sz_steady_isoviscous.py  sz_steady_problem.py  sz_steady_tests.py  sz_tdep_dislcreep.py  sz_tdep_isoviscous.py  sz_tdep_problem.py  sz_tests.py
python/utils/: __init__.py  ipp.py  plot.py
(+549 files in other folders)
