[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "FEniCS_SZ"
version = "0.9.0"
dependencies = [
    "jupyter-book==1.0.4.post1",
    "meshio==5.3.5",
    "h5py==3.13.0",
    "seaborn==0.13.2",
    "pandas==2.2.3",
    "tqdm==4.67.1",
    "pyvista[all]==0.44.1",
    "fenics-dolfinx==0.9.0",
    "ipdb==0.13.13",
    "ipylab==1.0.0",
    "ipywidgets==7.7.1",
    "ipyparallel==9.0.1",
]

[project.optional-dependencies]
dev = ["pdbpp", "ipython==8.28.0", "jupytext==1.17.1", "ruff==0.11.8"]

[tool.setuptools]
packages = []


[tool.jupytext]
formats = "ipynb,py:percent"


[tool.ruff.lint.isort]
known-first-party = ["basix", "dolfinx", "ffcx", "ufl"]
known-third-party = ["gmsh==4.13.1.dev1", "numpy==2.0.2", "pytest==8.3.3"]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py==4.0.0", "petsc4py==3.22.0"]
